<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_autor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutorFragment">

    <TextView
        android:id="@+id/tvNomeAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome do Autor"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/etNomeAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvSobrenomeAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sobrenome do Autor"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAutor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/etSobrenomeAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSobrenomeAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnInserirAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inserir"
        app:layout_constraintTop_toBottomOf="@+id/etSobrenomeAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarAutor"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnModificarAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        app:layout_constraintTop_toBottomOf="@+id/etSobrenomeAutor"
        app:layout_constraintStart_toEndOf="@+id/btnInserirAutor"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnExcluirAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/excluir"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarAutor"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnBuscarAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarAutor"
        app:layout_constraintStart_toEndOf="@+id/btnExcluirAutor"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnListarAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAutores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnListarAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
