<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteFragment">

    <TextView
        android:id="@+id/tvNomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome do Cliente"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/etNomeCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvCpfCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CPF do Cliente"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etNomeCliente"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/etCpfCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCpfCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvEnderecoCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Endereço do Cliente"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etCpfCliente"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/etEnderecoCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEnderecoCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnInserirCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inserir"
        app:layout_constraintTop_toBottomOf="@+id/etEnderecoCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarCliente"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnModificarCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        app:layout_constraintTop_toBottomOf="@+id/etEnderecoCliente"
        app:layout_constraintStart_toEndOf="@+id/btnInserirCliente"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnExcluirCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/excluir"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarCliente"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnBuscarCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarCliente"
        app:layout_constraintStart_toEndOf="@+id/btnExcluirCliente"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnListarCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvClientes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnListarCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
